# examples-of-basic-c

./: .gitignore  CMakeLists.txt  README.md  array  array.c  operators  scanf  strings  strings.c  testsizeof  testsizeof.c  testspec
basic-of-c/: hello  hi  opetators.c  scanftest.c  testspec.c
boilerplate/: CMakeLists.txt
examples-pointer/arithmetic-operations/: fifth  fifth.c  first  first.c  fourth  fourth.c  second  second.c  third  third.c
examples-pointer/array/: first  first.c  second  second.c  third  third.c
examples-pointer/array-of-pointers/: init  init.c  pointer-on-pointer  pointer-on-pointer.c  string  string.c
examples-pointer/basic/: first  first.c  second  second.c  third  third.c
examples-pointer/constants/: first  first.c
examples-pointer/control-of-dynamic-memory/: block  block.c  global  global.c  static  static.c
examples-pointer/dynamic_memory/: one-dimensional-array  one-dimensional-array.c  two-dimensional-array  two-dimensional-array-with-dynamic-columns  two-dimensional-array-with-dynamic-columns.c  two-dimensional-array.c
examples-pointer/function-parameters/: increment  increment.c  swap  swap.c  twice  twice.c
examples-pointer/functions-with-dynamic-count-of-parameters/: display  display.c  sum  sum-va  sum-va.c  sum.c
examples-pointer/pointer-on-function-parameters-and-results/: condition  condition.c  parameters  parameters.c  return-changed  return-changed.c  returns  (+1 more)
test-include/: main  main.c  mainalt  mainalt.c
test-macros/: fifth  fifth.c  first  first.c  fourth  fourth.c  second  second.c  third  third.c
(+279 files in other folders)
